# internal/controller/account/login_controller.go
@@ -48,3 +48,28 @@ func (c *cUserLogin) Register(ctx *gin.Context) {
 	}
 	response.SuccessResponse(ctx, codeStatus, nil)
 }
+
+// Verify OTP Login By User
+// @Summary      Verify OTP Login By User
+// @Description  Verify OTP Login By User
+// @Tags         accounts management
+// @Accept       json
+// @Produce      json
+// @Param		 payload body model.VerifyInput true "payload"
+// @Success      200  {object}  response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /user/verify_account [post]
+func (c *cUserLogin) VerifyOTP(ctx *gin.Context) {
+	var params model.VerifyInput
+	if err := ctx.ShouldBindJSON(&params); err != nil {
+		response.ErrorResponse(ctx, response.ErrCodeParamInvalid, err.Error())
+		return
+	}
+	result, err := service.UserLogin().VerifyOTP(ctx, &params)
+
+	if err != nil {
+		response.ErrorResponse(ctx, response.ErrInvalidOTP, err.Error())
+		return
+	}
+	response.SuccessResponse(ctx, response.ErrCodeSuccess, result)
+}
