# internal/model/login.go
@@ -5,3 +5,14 @@ type RegisterInput struct {
 	VerifyType    int    `json:"verify_type"`
 	VerifyPurpose string `json:"verify_purpose"`
 }
+
+type VerifyInput struct {
+	VerifyKey  string `json:"verify_key"`
+	VerifyCode string `json:"verify_code"`
+}
+
+type VerifyOTPOutput struct {
+	Token   string `json:"token"`
+	UserId  string `json:"user_id"`
+	Message string `json:"message"`
+}
