# internal/routers/user/user.router.go
@@ -3,6 +3,7 @@ package user
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/nhh57/go-ecommerce-backend-api/internal/controller/account"
+	"github.com/nhh57/go-ecommerce-backend-api/internal/wire"
 )
 
 type UserRouter struct{}
@@ -13,16 +14,16 @@ func (pr *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	//ur := repo.NewUserRepository()
 	//us := service.NewUserService(ur)
 	//userHandlerNonDependency := controller.NewUserController(us)
-	//userController, _ := wire.InitUserRouterHanlder()
+	userController, _ := wire.InitUserRouterHanlder()
 	// Wire Go
 	// Dependency injection
 	userRouterPublic := Router.Group("/user")
 	{
 		//userRouterPublic.POST("/register", userController.Register) // register -> yes -> no
-		userRouterPublic.POST("/register", account.Login.Register) // register -> yes -> no
-
-		userRouterPublic.GET("/login", account.Login.Login) // login -> YES -> No
-		userRouterPublic.GET("/otp")                        //
+		userRouterPublic.POST("/register", account.Login.Register)        // register -> yes -> no
+		userRouterPublic.POST("/verify_account", account.Login.VerifyOTP) // register -> yes -> no
+		userRouterPublic.GET("/login", account.Login.Login)               // login -> YES -> No
+		userRouterPublic.GET("/otp")                                      //
 	}
 	// private router
 	userRouterPrivate := Router.Group("/user")
@@ -30,7 +31,7 @@ func (pr *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 	//userRouterPrivate.Use(Authen())
 	//userRouterPrivate.Use(Permissions())
 	{
-		userRouterPrivate.POST("/get_info")
+		userRouterPrivate.POST("/get_info", userController.Register)
 	}
 
 }
